--- a/src/components/header/styles/header.module.sass
+++ b/src/components/header/styles/header.module.sass
@@ -21,8 +21,8 @@
       padding: 15px 20px
       gap: 30px
     @media (max-width: 500px )
-      padding: 15px 10px
-      gap: 25px
+      padding: 15px 15px
+      gap: 0
       justify-content: center
   &__logo
     position: relative
@@ -57,36 +57,90 @@
     justify-content: flex-end
     min-height: 27px
     width: 100%
-    max-width: 1000px
+    max-width: 1050px
     @media (max-width: 1550px )
       max-width: 700px
     @media (max-width: 1170px )
       max-width: 550px
     @media (max-width: 900px )
-      max-width: 90%
+      max-width: 850px
     &__input
+      position: relative
       width: 95%
-      padding: 10px 20px
-      @include f18_500
-      background-color: $gray
-      color: #ffffff
-      outline: none
-      border: none
-      border-radius: 10px
-      opacity: 80%
       @media (max-width: 900px )
-        width: 90%
+        width: 100%
+        margin: 0 auto 0 -1px
+      input
+        padding: 10px 48px 10px 20px
+        @include f18_500
+        outline: none
+        border: none
+        border-radius: 10px
+        opacity: 80%
+        background-color: $gray
+        color: $white
+        width: 100%
+      ul
+        list-style: none
+        position: absolute
+        top: 45px
+        left: 0
+        width: 100%
+        max-height: 523px
+        overflow: scroll
+        &::-webkit-scrollbar
+          width: 0px
+    &__li
+      background-color: $gray
+      color: $white
+      padding: 10px
+      border: 1px solid $black
+      display: flex
+      align-items: center
+      justify-content: space-between
+      div
+        display: flex
+        justify-content: flex-start
+        align-items: center
+        gap: 10px
+        @media (max-width: 900px)
+          gap: 7px
+      &__name
+        @include f18_500
+        @media (max-width: 900px)
+          font-size: 14px
+          line-height: 16px
+          font-weight: 400
+      &__year
+        line-height: 16px
+        font-weight: 300
+        font-size: 14px
+        @media (max-width: 900px)
+          font-size: 12px
+      &__rating
+        background-color: $manePink
+        color: $black
+        border-radius: 10px
+        padding: 3px 7px
+        font-size: 14px
+        line-height: 16px
+        font-weight: 500
+        margin-left: 15px
+        @media (max-width: 900px)
+          font-size: 12px
+          padding: 2px 5px
     &__btn
       cursor: pointer
       background-color: transparent
-      width: 32px
-      height: 32px
+      width: 25px
+      height: 25px
       position: relative
       overflow: hidden
       border: none
+      margin-left: -40px
       @media (max-width: 1170px )
-        width: 25px
-        height: 25px
+        width: 20px
+        height: 20px
       &::after
         content: ''
         display: block
@@ -109,6 +163,8 @@
       gap: 30px
     @media (max-width: 1170px )
       width: 102px
+    @media (max-width: 900px )
+      margin-left: 25px
   &__theme
     cursor: pointer
     background-color: transparent
