--- a/src/components/videoBanner/styles/videoBanner.module.sass
+++ b/src/components/videoBanner/styles/videoBanner.module.sass
@@ -3,6 +3,30 @@
   
 .videoBanner
   position: relative
+  &__image__wrap
+    height: 750px
+    overflow: hidden
+    display: none
+    @media (max-width: 900px)
+      display: block
+  &__image
+    margin-top: 50px
+    position: relative
+    height: 800px
+    width: 100%
+    z-index: 1 
+    &::after
+      content: ''
+      display: block
+      padding-top: auto
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+      position: absolute
+      top: 0px
+      left: 0px
+      object-position: center
   &__video
     align-items: center
     display: flex
@@ -13,7 +37,7 @@
     width: 100%
     z-index: 1
     @media (max-width: 900px)
-      height: 800px
+      display: none
   &__video__wrap
     background-color: rgba(0,0,0,.5)
     height: 1350px
@@ -42,8 +66,8 @@
     flex-direction: column
     color: $white
     @media (max-width: 900px)
-      height: 805px
-      padding: 50px 20px 70px
+      height: 750px
+      padding: 50px 20px 
     &__info
       max-width: 40%
       text-align: left
